--- a/Backend/package.json
+++ b/Backend/package.json
@@ -7,9 +7,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.1.0"
+    "mongoose": "^8.1.0",
+    "nodemon": "^3.0.3"
   },
-  "name": "api_count",
+  "name": "Backend",
   "version": "1.0.0",
   "main": "scripts.js",
   "scripts": {
