--- a/Backend/.env
+++ b/Backend/.env
@@ -1,3 +1,3 @@
 PORT = 10000
-MONGODB_URl = 'mongodb+srv://population_counter:population_counter@cluster0.jghbiuf.mongodb.net/?retryWrites=true&w=majority'
+MONGODB_URl = 'mongodb+srv://population_counter:population_counter@cluster0.jghbiuf.mongodb.net/'
 JWT = 'kijiosdnxoiwnio4'
